--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/emailsender",
+    "name": "jollie/emailsender",
     "description": "Demo for queue",
     "authors": [
         {
